hard-gists/4711568/run.log
=== Docker Run Log for 4711568 ===
Started at: Mi 29. Okt 14:57:57 CET 2025

[2025-10-29 14:57:58] START: Running container for 4711568
[2025-10-29 14:57:58] SUCCESS: Container 8a7b81eee65f17d17abe5be802180816d0873e2f14677ac522ec106508c74467 started for 4711568
=== Container logs for 4711568 ===
  File "/snippet.py", line 76
    print repos.name
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4711568 ===
[2025-10-29 14:58:00] INFO: Container 8a7b81eee65f17d17abe5be802180816d0873e2f14677ac522ec106508c74467 has stopped
